’首页组件化、配置了登陆页等‘

--- a/src/assets/styles/mixins.less
+++ b/src/assets/styles/mixins.less
@@ -1,8 +1,19 @@
 a {
   text-decoration: none;
   color: @mainColor;
-  &:hover {
-    color: #fff;
-    background-color: @mainColor;
-  }
+  //   &:hover {
+  //     color: #fff;
+  //     background-color: @mainColor;
+  //   }
 }
+
+// @keyframes rotate-90-cw {
+//   0% {
+//     -webkit-transform: rotate(0);
+//     transform: rotate(0);
+//   }
+//   100% {
+//     -webkit-transform: rotate(90deg);
+//     transform: rotate(90deg);
+//   }
+// }
