--- a/src/assets/styles/common.css
+++ b/src/assets/styles/common.css
@@ -3,5 +3,23 @@ body {
 }
 
 .el-avatar {
-    width: auto !important;
+  width: auto !important;
 }
+
+li {
+  list-style: none;
+}
+html {
+  /* height: 100%;Ï */
+}
+/* .clearfix:after,
+.clearfix:before {
+  content: '';
+  display: table;
+}
+.clearfix:after {
+  clear: both;
+}
+.clearfix {
+  *zoom: 1;
+} */
